stoa-gateway/tests/contract/snapshots/contract__tools__rest-tools-invoke-unknown.snap
---
source: tests/contract/tools.rs
assertion_line: 58
expression: json
---
{
  "content": [
    {
      "text": "Tool 'nonexistent' not found",
      "type": "text"
    }
  ],
  "isError": true
}
