stoa-gateway/tests/contract/snapshots/contract__tools__tools-call-unknown.snap
---
source: tests/contract/tools.rs
assertion_line: 28
expression: json
---
{
  "content": [
    {
      "text": "Tool 'nonexistent-tool' not found",
      "type": "text"
    }
  ],
  "isError": true
}
